--- a/ui-config-tool/src/app/controlprocessor/controlprocessor.component.html
+++ b/ui-config-tool/src/app/controlprocessor/controlprocessor.component.html
@@ -1,18 +1,20 @@
 <button class="cp-btn" (click)="Toggle()"><i class="cp-rightarrow" id="{{cp.hostname}}"></i>  {{cp.hostname}}</button>
-  <div id="cpinfo{{cp.hostname}}" class="hidden">
+<div id="cpinfo{{cp.hostname}}" class="hidden">
     <div id="slavestatus{{cp.hostname}}" class="cp-row">
-      <label class="cp-label">Am I a slave?  </label>
+        <label class="cp-label">Am I a slave?  </label>
         <input type="radio" name="slave{{cp.hostname}}" id="slave1{{cp.hostname}}" value="true" (click)="SlaveStatus()"> Yes
         <input type="radio" name="slave{{cp.hostname}}" id="slave2{{cp.hostname}}" value="false" (click)="SlaveStatus()"> No
     </div>
     <div id="master{{cp.hostname}}" class="cp-row hidden">
-      <label class="cp-label">Who is my master?  </label>
-      <select id="mastername{{cp.hostname}}" class="cp-select" [(ngModel)]="cp.master">
-        <option *ngFor="let m of config.panels" [value]="m.hostname">{{m.hostname}}</option>
+        <label class="cp-label">Who is my master?  </label>
+        <select id="mastername{{cp.hostname}}" class="cp-select" [(ngModel)]="cp.preset">
+          <ng-container *ngFor="let p of CPList" >
+            <option *ngIf="p.hostname != cp.hostname" [value]="p.preset">{{p.hostname}}</option>
+          </ng-container>
       </select>
     </div>
     <div id="preset{{cp.hostname}}" class="cp-row hidden">
-      <label class="cp-label">Which template?  </label>
+        <label class="cp-label">Which template?  </label>
         <select class="cp-select" [(ngModel)]="cp.preset" id="choice{{cp.hostname}}">
           <option value="Custom">Custom</option>
           <option value="Apple" style="color: #e6ac00">Apple</option>
@@ -23,6 +25,6 @@
         <button class="cp-toggle-btn" id="templateToggle{{cp.hostname}}" (click)="ToggleTemplate()">Show/Hide</button>
     </div>
     <div *ngIf="cp.preset" class="cp-template hidden" id="t{{cp.hostname}}">
-      <ui-template [choice]="cp.preset" [cp]="cp"></ui-template>
+        <ui-template [choice]="cp.preset" [cp]="cp"></ui-template>
     </div>
-  </div>
+</div>
