--- a/ui-config-tool/src/app/newroom/newroom.component.css
+++ b/ui-config-tool/src/app/newroom/newroom.component.css
@@ -1,120 +1,148 @@
 label {
-  padding: 12px 12px 12px 0;
-  display: inline-block;
+    padding: 12px 12px 12px 0;
+    display: inline-block;
 }
 
+
 /* CONTAINERS */
+
 .nr-container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  margin: auto;
-  width: 100%;
-  overflow: auto;
-  max-width: 2000px;
-  min-height: 100%;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: auto;
+    width: 100%;
+    overflow: auto;
+    max-width: 2000px;
+    min-height: 100%;
 }
 
 .nr-container2 {
-  border-radius: 5px;
-  background-color: #ffffff;
-  padding: 20px;
-  margin-top: 2%;
-  margin-left: 15%;
-  margin-right: 15%;
-  max-height: 100%;
-  overflow: auto;
+    border-radius: 5px;
+    background-color: #ffffff;
+    padding: 20px;
+    margin-top: 2%;
+    margin-left: 15%;
+    margin-right: 15%;
+    max-height: 100%;
+    overflow: auto;
 }
 
+
 /* LOCATION INFORMATION */
+
 .nr-location {
-  position: relative;
-  margin: auto;
-  width: 75%;
-  min-height: 100%;
+    position: relative;
+    margin: auto;
+    width: 75%;
+    min-height: 100%;
 }
 
 .nr-location:after {
-  content: "";
-  display: table;
-  clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .nr-building-fields {
-  float: left;
-  margin: auto;
-  margin-left: 8%;
-  width: 33%;
+    float: left;
+    margin: auto;
+    margin-left: 8%;
+    width: 33%;
 }
 
 .nr-room-fields {
-  float: left;
-  margin: auto;
-  width: 33%;
+    float: left;
+    margin: auto;
+    width: 33%;
 }
 
-
 .nr-bldg {
-  float: left;
-  margin: auto;
-  margin-left: 20%;
-  width: 25%;
+    float: left;
+    margin: auto;
+    margin-left: 20%;
+    width: 25%;
 }
 
 .nr-room {
-  float: left;
-  margin: auto;
-  margin-left: 10%;
-  width: 22%;
+    float: left;
+    margin: auto;
+    margin-left: 10%;
+    width: 22%;
 }
 
 .nr-box {
-  float: left;
-  margin: auto;
-  width: 45%;
+    float: left;
+    margin: auto;
+    width: 45%;
 }
 
+
 /* BUTTONS */
+
 .button {
-  background-color: #0066ff;
-  border-radius: 7px;
-  color: white;
-  padding: 8px 18px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 14px;
-  margin: auto;
-  margin-top: 2px;
-  cursor: pointer;
+    background-color: #0066ff;
+    border-radius: 7px;
+    color: white;
+    padding: 8px 18px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    margin: auto;
+    margin-top: 2px;
+    cursor: pointer;
 }
 
 .nr-location-btn {
-  float: left;
-  margin: auto;
-  width: 25%;
+    float: left;
+    margin: auto;
+    width: 25%;
+}
+
+.nr-label {
+    margin-left: 15%;
+    width: 35%;
+}
+
+.nr-select {
+    width: 35%;
+    background-color: white;
 }
 
 .nr-controlp {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .push {
-  height: 65px; /* .push must be the same height as .footer */
+    height: 65px;
+    /* .push must be the same height as .footer */
 }
 
+
 /* Responsive layout - when the screen is less than 800px wide */
+
 @media (max-width: 800px) {
-  .nr-bldg {
-    margin-left: 5%;
-  }
-  .nr-room {
-    margin-left: -2%;
-    margin-right: -2%;
-  }
-  .nr-box {
-    margin-left: 10%;
-  }
-  .nr-location-btn {
-    margin-left: -5%;
-  }
+    .nr-bldg {
+        margin-left: 5%;
+    }
+    .nr-room {
+        margin-left: -2%;
+        margin-right: -2%;
+    }
+    .nr-box {
+        margin-left: 10%;
+    }
+    .nr-location-btn {
+        margin-left: -5%;
+    }
+    .nr-container2 {
+        padding: 10px;
+    }
+    .nr-label {
+        margin-left: 2%;
+        width: 45%;
+    }
+    .nr-select {
+        width: 45%;
+    }
 }
