--- a/ui-config-tool/src/app/newroom/newroom.component.html
+++ b/ui-config-tool/src/app/newroom/newroom.component.html
@@ -1,30 +1,39 @@
-
 <div class='nr-container'>
     <div class="nr-location">
-      <div class="nr-building-fields">
-        <div class="nr-bldg">
-          <label>Building: </label>
+        <div class="nr-building-fields">
+            <div class="nr-bldg">
+                <label>Building: </label>
+            </div>
+            <div class="nr-box">
+                <input [(ngModel)]="room.Building" name="building" type="text" placeholder="ex: JFSB" onkeydown="if(event.keyCode == 13) document.getElementById('baking').click()">
+            </div>
         </div>
-          <div class="nr-box">
-            <input [(ngModel)]="space.building" name="building"  type="text" placeholder="ex: JFSB" onkeydown="if(event.keyCode == 13) document.getElementById('baking').click()">
-          </div>
-      </div>
-      <div class="nr-room-fields">
-        <div class="nr-room">
-          <label>Room: </label>
+        <div class="nr-room-fields">
+            <div class="nr-room">
+                <label>Room: </label>
+            </div>
+            <div class="nr-box">
+                <input [(ngModel)]="room.Room" name="room" type="text" placeholder="ex: B037" onkeydown="if(event.keyCode == 13) document.getElementById('baking').click()">
+            </div>
         </div>
-        <div class="nr-box">
-          <input [(ngModel)]="space.room" name="room" type="text" placeholder="ex: B037" onkeydown="if(event.keyCode == 13) document.getElementById('baking').click()">
+        <div class="nr-location-btn">
+            <button class="button" id="baking" (click)="GetTouchPanels()">Start Baking!</button>
         </div>
-      </div>
-      <div class="nr-location-btn">
-          <button class="button" id="baking" (click)="GetTouchPanels()">Start Baking!</button>
-       </div>
     </div>
 
     <div *ngIf="CPList.length > 0" class="nr-container2">
-      <div *ngFor="let cp of CPList; let i = index" class="nr-controlp">
-        <control-processor [cp]="cp" [CPList]="CPList"></control-processor>
-      </div>
+        <label class="nr-label">Which template does this room fit?  </label>
+        <select class="nr-select" [(ngModel)]="room.Template" id="roomTemplate">
+          <option value="Apple" style="color: #e6ac00">Apple (1 pi, 1 display, 1 HDMI)</option>
+          <option value="Mud" style="color: #534424cc">Mud (like Apple, but add a VIA)</option>
+          <option value="Key Lime" style="color: #3c8213">Key Lime (like Apple, but add a VIA and a PC)</option>
+          <option value="Custom">Something different...</option>
+        </select>
+        <div *ngIf="room.Template != null" style="margin-top: 2%">
+            <div *ngFor="let cp of CPList; let i = index" class="nr-controlp">
+                <app-panel [panel]="cp"></app-panel>
+            </div>
+        </div>
     </div>
+
 </div>
