--- a/ui-config-tool/src/app/editroom/editroom.component.css
+++ b/ui-config-tool/src/app/editroom/editroom.component.css
@@ -1,91 +1,183 @@
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+
 /* CONTAINERS */
+
 .er-container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  margin: auto;
-  width: 100%;
-  overflow: auto;
-  max-width: 2000px;
-  min-height: 100%;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: auto;
+    width: 100%;
+    overflow: auto;
+    max-width: 2000px;
+    min-height: 100%;
 }
 
 .er-container2 {
-  border-radius: 5px;
-  background-color: #ffffff;
-  padding: 20px;
-  margin-top: 2%;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 80%;
-  max-height: 100%;
-  overflow: auto;
+    border-radius: 5px;
+    background-color: #ffffff;
+    padding: 20px;
+    margin-top: 2%;
+    margin-left: 15%;
+    margin-right: 15%;
+    max-height: 100%;
+    overflow: auto;
 }
 
+
 /* LOCATION INFORMATION */
+
 .er-location {
-  position: relative;
-  margin: auto;
-  width: 75%;
-  min-height: 100%;
+    position: relative;
+    margin: auto;
+    width: 75%;
+    min-height: 100%;
 }
 
 .er-location:after {
-  content: "";
-  display: table;
-  clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
 
 .er-building-fields {
-  float: left;
-  margin: auto;
-  margin-left: 8%;
-  width: 33%;
+    float: left;
+    margin: auto;
+    margin-left: 8%;
+    width: 33%;
 }
 
 .er-room-fields {
-  float: left;
-  margin: auto;
-  width: 33%;
+    float: left;
+    margin: auto;
+    width: 33%;
 }
 
-
 .er-bldg {
-  float: left;
-  margin: auto;
-  margin-left: 20%;
-  width: 25%;
+    float: left;
+    margin: auto;
+    margin-left: 20%;
+    width: 25%;
 }
 
 .er-room {
-  float: left;
-  margin: auto;
-  margin-left: 10%;
-  width: 22%;
+    float: left;
+    margin: auto;
+    margin-left: 10%;
+    width: 22%;
 }
 
 .er-box {
-  float: left;
-  margin: auto;
-  width: 45%;
+    float: left;
+    margin: auto;
+    width: 45%;
 }
 
+
 /* BUTTONS */
+
 .button {
-  background-color: #0066ff;
-  border-radius: 7px;
-  color: white;
-  padding: 8px 18px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 14px;
-  margin: auto;
-  margin-top: 2px;
-  cursor: pointer;
+    background-color: #0066ff;
+    border-radius: 7px;
+    color: white;
+    padding: 8px 18px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    margin: auto;
+    margin-top: 2px;
+    cursor: pointer;
+}
+
+.button-2 {
+    background-color: #5fce0a;
+    border-radius: 7px;
+    color: #000000;
+    padding: 8px 18px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    margin-top: 2px;
+    cursor: pointer;
 }
 
 .er-location-btn {
-  float: left;
-  margin: auto;
-  width: 25%;
+    float: left;
+    margin: auto;
+    width: 25%;
+}
+
+.er-submit-btn {
+    width: 8%;
+    margin-top: 5px;
+    margin-left: 15%;
+}
+
+.er-label {
+    margin-left: 10%;
+    margin-top: 5px;
+    width: 30%;
+}
+
+.er-select {
+    width: 25%;
+    background-color: white;
+}
+
+.er-controlp {
+    margin-bottom: 5px;
+}
+
+.er-row {
+    position: relative;
+    float: left;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+.push {
+    height: 65px;
+    /* .push must be the same height as .footer */
+}
+
+
+/* Responsive layout - when the screen is less than 800px wide */
+
+@media (max-width: 800px) {
+    .er-bldg {
+        margin-left: 5%;
+    }
+    .er-room {
+        margin-left: -2%;
+        margin-right: -2%;
+    }
+    .er-box {
+        margin-left: 10%;
+    }
+    .er-location-btn {
+        margin-left: -5%;
+    }
+    .er-container2 {
+        padding: 10px;
+        margin-left: 8%;
+        margin-right: 8%;
+    }
+    .er-label {
+        margin-left: 3%;
+        width: 38%;
+    }
+    .er-select {
+        width: 35%;
+    }
+    .er-submit-btn {
+        width: 12%;
+        margin-right: 3%;
+        margin-left: 5%;
+    }
 }
