--- a/ui-config-tool/src/app/panel/panel.component.css
+++ b/ui-config-tool/src/app/panel/panel.component.css
@@ -6,6 +6,75 @@ i {
     margin-right: 2px;
 }
 
+
+/* ROWS */
+
+.panel-row {
+    position: relative;
+    float: left;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+.panel-row-short {
+    margin-left: 2%;
+    width: 50%;
+}
+
+.panel-row-display {
+    margin-top: 10px;
+    margin-left: 5%;
+    margin-bottom: 10px;
+    max-width: 85%;
+}
+
+.panel-row-input {
+    margin-top: 10px;
+    margin-left: 5%;
+    margin-bottom: 15px;
+    max-width: 85%;
+}
+
+.panel-row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+/* LABELS */
+
+.panel-label {
+    margin-left: 5%;
+    width: 15%;
+}
+
+.panel-label-2 {
+    width: 9%;
+}
+
+.panel-label-input {
+    width: wrap;
+    margin-left: 3%;
+}
+
+.panel-label-short {
+    width: 19%;
+    margin-right: 5px;
+}
+
+.panel-label-big {
+    margin-left: 5%;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+
+/* BUTTONS */
+
 .panel-rightarrow {
     transform: rotate(-45deg);
     -webkit-transform: rotate(-45deg);
@@ -22,71 +91,16 @@ i {
     border: none;
     background-color: inherit;
     padding: 10px 28px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     display: inline-block;
+    font-weight: 600;
     outline-color: #0066ff;
 }
 
 .panel-btn:hover {
     background: #eee;
     outline-color: #0066ff;
-}
-
-.panel-row {
-    position: relative;
-    float: left;
-    margin: auto;
-    margin-top: 5px;
-    width: 100%;
-}
-
-.panel-row-short {
-    margin-left: 2%;
-    width: 50%;
-}
-
-.panel-row-display {
-    margin-top: 10px;
-    margin-left: 5%;
-    margin-bottom: 10px;
-    max-width: 75%;
-}
-
-.panel-row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.panel-label {
-    margin-left: 5%;
-    width: 15%;
-}
-
-.panel-label-2 {
-    width: 8%;
-}
-
-.panel-label-short {
-    width: 19%;
-    margin-right: 5px;
-}
-
-.panel-select {
-    width: 20%;
-    background-color: white;
-}
-
-.panel-select:focus,
-.panel-select:hover {
-    outline-color: #0066ff;
-}
-
-.panel-box {
-    margin: auto;
-    margin-top: 5px;
-    width: 20%;
 }
 
 .panel-icon-btn {
@@ -113,6 +127,7 @@ i {
     display: inline-block;
     padding: 8px 10px;
     position: relative;
+    margin-right: 2%;
 }
 
 .modal-icon-btn {
@@ -134,10 +149,8 @@ i {
     color: white;
 }
 
-.wrapper {
-    margin-left: 2%;
-    width: 50%;
-}
+
+/* CUSTOM CHECKBOX STUFF */
 
 
 /* The container */
@@ -224,6 +237,39 @@ i {
 }
 
 
+/* INPUT STYLES */
+
+.panel-select {
+    width: 20%;
+    background-color: white;
+}
+
+.panel-select-short {
+    width: 10%;
+    height: 45px;
+    background-color: white;
+}
+
+.panel-select:focus,
+.panel-select:hover,
+.panel-select-short:focus,
+.panel-select-short:hover {
+    outline-color: #0066ff;
+}
+
+.panel-box {
+    margin: auto;
+    margin-top: 5px;
+    width: 20%;
+}
+
+.panel-box-short {
+    margin: auto;
+    margin-top: 5px;
+    width: 10%;
+}
+
+
 /* The Modal (background) */
 
 .modal {
@@ -303,11 +349,17 @@ i {
     .panel-label-2 {
         width: 38%;
     }
+    .panel-label-big {
+        margin-left: 4%;
+    }
     .panel-select {
         width: 40%;
     }
     .panel-box {
         width: 40%;
+    }
+    .panel-select-short {
+        width: 20%;
     }
     .panel-row-short {
         margin-left: 5%;
@@ -321,7 +373,13 @@ i {
         max-width: 70%;
         margin-left: 17%;
     }
+    .panel-row-input {
+        max-width: 80%;
+        margin-left: 12%;
+        margin-bottom: 5%;
+    }
     .panel-check-container {
         margin-right: 5%;
+        width: 70px;
     }
 }
