--- a/ui-config-tool/src/app/editroom/editroom.component.html
+++ b/ui-config-tool/src/app/editroom/editroom.component.html
@@ -19,18 +19,14 @@
         <div class="er-location-btn">
             <button class="button" id="baking" (click)="GetRoomDevices()">Start Baking!</button>
         </div>
+
+        <div class="er-submit-btn">
+            <button class="button-2 " (click)="Finish()">Finish</button>
+        </div>
     </div>
 
-    <div *ngIf="panelNames.length > 0" class="er-container2">
-        <div class="er-row">
-            <!-- <div class="nr-submit-btn"> -->
-            <button class="button-2 er-submit-btn" (click)="Finish()">Finish</button>
-            <!-- </div> -->
-        </div>
-
-
-
-        <div *ngIf="show" style="margin-top: 2%">
+    <div *ngIf="panelNames.length > 0 && config != null" class="er-container2">
+        <div *ngIf="config.panels.length > 0 && show" style="margin-top: 2%">
             <div *ngFor="let cp of config.panels; let i = index" class="er-controlp">
                 <app-panel #panel [panel]="cp" [config]="config" [iconlist]="iconlist" [indyAudio]="audios"></app-panel>
             </div>
