--- a/ui-config-tool/src/app/newroom/newroom.component.css
+++ b/ui-config-tool/src/app/newroom/newroom.component.css
@@ -43,7 +43,7 @@ label {
 .nr-location {
     position: relative;
     margin: auto;
-    width: 75%;
+    width: 85%;
     min-height: 100%;
 }
 
@@ -56,14 +56,14 @@ label {
 .nr-building-fields {
     float: left;
     margin: auto;
-    margin-left: 8%;
-    width: 33%;
+    margin-left: 13%;
+    width: 22%;
 }
 
 .nr-room-fields {
     float: left;
     margin: auto;
-    width: 33%;
+    width: 22%;
 }
 
 .nr-bldg {
@@ -76,7 +76,7 @@ label {
 .nr-room {
     float: left;
     margin: auto;
-    margin-left: 10%;
+    margin-left: 5%;
     width: 22%;
 }
 
@@ -85,12 +85,11 @@ label {
 
 .nr-box {
     float: left;
-    margin: auto;
     width: 45%;
 }
 
 .nr-select {
-    width: 25%;
+    width: 35%;
     background-color: white;
 }
 
@@ -125,22 +124,22 @@ label {
 .nr-location-btn {
     float: left;
     margin: auto;
-    width: 25%;
+    width: 12%;
 }
 
 .nr-submit-btn {
+    float: left;
+    margin-left: 5%;
     width: 8%;
-    margin-top: 5px;
-    margin-left: 15%;
 }
 
 
 /* EXTRA STYLES */
 
 .nr-label {
-    margin-left: 10%;
+    margin-left: 15%;
     margin-top: 5px;
-    width: 30%;
+    width: 35%;
 }
 
 .nr-controlp {
@@ -155,35 +154,71 @@ label {
 
 /* Responsive layout - when the screen is less than 800px wide */
 
-@media (max-width: 800px) {
+@media (max-width: 1440px) {
+    .nr-container2 {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
     .nr-bldg {
-        margin-left: 5%;
+        margin-right: 5%;
     }
     .nr-room {
-        margin-left: -2%;
-        margin-right: -2%;
+        margin-right: 5%;
     }
-    .nr-box {
-        margin-left: 10%;
+}
+
+@media (max-width: 1260px) {
+    .nr-container2 {
+        margin-left: 7%;
+        margin-right: 7%;
+    }
+    .nr-bldg {
+        margin-right: 9%;
+    }
+    .nr-room {
+        margin-right: 5%;
     }
     .nr-location-btn {
-        margin-left: -5%;
-    }
-    .nr-container2 {
-        padding: 10px;
-        margin-left: 8%;
-        margin-right: 8%;
-    }
-    .nr-label {
-        margin-left: 3%;
-        width: 38%;
-    }
-    .nr-select {
-        width: 35%;
+        width: 16%;
     }
     .nr-submit-btn {
-        width: 12%;
-        margin-right: 3%;
-        margin-left: 5%;
+        margin-left: 2%;
+    }
+}
+
+@media (max-width: 960px) {
+    .nr-container2 {
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    .nr-bldg {
+        margin-right: 15%;
+        margin-left: 12%;
+    }
+    .nr-room {
+        margin-right: 10%;
+    }
+    .nr-box {
+        width: 47%;
+    }
+    .nr-location-btn {
+        width: 18%;
+    }
+}
+
+@media (max-width: 870px) {
+    .nr-container2 {
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+    .nr-bldg {
+        margin-right: 17%;
+        margin-left: 4%;
+    }
+    .nr-room {
+        margin-right: 12%;
+    }
+    .nr-box {
+        width: 54%;
     }
 }
